@@ -6300,7 +6300,10 @@ a permanent part of the host. Values are true or false.</li>
         <li><span style="font-weight: bold;">PASSIVE</span>:
 Whether
 this script keeps triggering RAND_PROG or other tick-based triggers
-even when the area is passive. Values are true or false.</li>
+even when the area is passive. Values are true or false.</li><li><span style="font-weight: bold;">NEEDPC</span>:
+Whether this script keeps triggering RAND_PROG or other tick-based
+triggers even when the scripted object's room contains no PCs.
+&nbsp;Values are true or false.</li>
 
       </ul>
 
