@@ -1976,6 +1976,15 @@ Example  : chant "summon seeds" apple\n\r\
 This chant causes seeds of the type specified to appear in the hands \
 of the druid.  The seeds are then useful for the Farming skill.
 
+CHANT_SUMMONSQUALL=CHANT_SUMMON_SQUALL
+CHANT_SUMMON_SQUALL=<ABILITY>\
+Usage    : CHANT "SUMMON SQUALL"\n\r\
+Example  : chant "summon squall"\n\r\
+This chant will cause a sudden heavy thunderstorm to develop and temperatures \
+to moderate.  However, this effect will be extremely short. \
+Success will depend, in part, on how large the area is that you are trying to affect. \
+See help on Predict Weather for more information on weather control.
+
 CHANT_SUMMONSUN=CHANT_SUMMON_SUN
 CHANT_SUMMON_SUN=<ABILITY>\
 Usage    : CHANT "SUMMON SUN"\n\r\
