@@ -288,6 +288,11 @@ SPEECH_PROG p i accept
 </DATA></FILE>
 <FILE><NAME>$QUEST_ID_escorted.script</NAME>
 <DATA>
+ONCE_PROG
+	MPSETINTERNAL PASSIVE false
+	MPSETINTERNAL NEEDPC false
+~
+
 QUEST_TIME_PROG * 1
 	if EVAL('$f' != '') AND VAR ($f $QUEST_ID_WARNED == '')
 		mpsetvar $f $QUEST_ID_WARNED 'WARNED'
@@ -372,7 +377,7 @@ RAND_PROG 99
 <FILE><NAME>$QUEST_ID_playertrack.script</NAME>
 <DATA>
 ONCE_PROG 100
-    mpsetvar $i INSTRUCTIONS $QUEST_INSTRUCTIONSSTRING
+	mpsetvar $i INSTRUCTIONS $QUEST_INSTRUCTIONSSTRING
 ~
 
 QUEST_TIME_PROG * -1
