@@ -5,6 +5,7 @@
   4. Socials update
   5. New Deviations features: mob power levels, sorting
   6. New Deviations button in the MUDGrinder map and room editors
+  7. New Chants: Summon Squall
 
 # Build 5.10.1 Release 1/01/2023
   1. FasterRecovery expanded and new char stat REJUVRATE for Prop*Adjuster
